<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>cstl-admin</artifactId>
  <packaging>war</packaging>
  <description></description>

  <parent>
    <groupId>org.constellation</groupId>
    <artifactId>modules</artifactId>
    <version>1.2.1</version>
  </parent>

  <profiles>
   
   
    <profile>
      <id>prod</id>
      <properties>
        <!-- Grunt build profile -->
        <grunt.build.profile>prod</grunt.build.profile>
        <!-- Spring profile to use -->
        <spring.profiles.active>prod</spring.profiles.active>
        <!-- i18n resource files reloading -->
        <message.reloading.enabled>false</message.reloading.enabled>
        <!-- log configuration -->
        <logback.loglevel>WARN</logback.loglevel>
        <logback.appender>CONSOLE</logback.appender>
        <!-- production database configuration -->

      </properties>
    </profile>
    <profile>
     <id>windows</id>
     <activation>
      <os>
       <family>windows</family>
      </os>
     </activation>
     <build>
       <plugins>
        <plugin>
            <groupId>com.github.eirslett</groupId>
            <artifactId>frontend-maven-plugin</artifactId>
            <version>${frontend.maven.plugin.version}</version>
            <executions>
                <!-- Run grunt build -->
                <execution>
                    <id>grunt-build</id>
                    <goals>
                        <goal>grunt</goal>
                    </goals>
                    <configuration>
                        <arguments>${grunt.build.profile} --target_dir="${grunt.target.dir}"</arguments>
                    </configuration>
                </execution>
            </executions>
        </plugin>
       </plugins>
     </build>
    </profile>
  </profiles>

  <properties>
   <logback.loglevel>DEBUG</logback.loglevel>
        <message.reloading.enabled>true</message.reloading.enabled>
  
          <!-- Grunt build profile -->
        <grunt.build.profile>dev</grunt.build.profile>
  
    <!-- Maven build properties -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.7</java.version>

    <!-- Librairies versions -->
    <spring.security.version>3.2.0.RELEASE</spring.security.version>
    <hibernate.version>4.2.7.Final</hibernate.version>
    <codahale.metrics.version>3.0.1</codahale.metrics.version>
    <node.version>v0.10.31</node.version>
    <npm.version>1.4.23</npm.version>
    <frontend.maven.plugin.version>0.0.24</frontend.maven.plugin.version>

    <!-- Grunt build properties -->
    <grunt.target.dir>${project.build.directory}/grunt-build</grunt.target.dir>
    <node.install.dir>${project.basedir}</node.install.dir>
  </properties>

  <repositories>
    <repository>
      <id>sonatype-releases</id>
      <name>Sonatype Releases Repository</name>
      <url>http://oss.sonatype.org/content/repositories/releases/</url>
    </repository>
  </repositories>
  <prerequisites>
    <maven>3.0.0</maven>
  </prerequisites>

  <dependencies>
    <dependency>
      <groupId>org.constellation</groupId>
      <artifactId>cstl-token</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.0.13</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.0.13</version>
    </dependency>
    <dependency>
      <groupId>com.codahale.metrics</groupId>
      <artifactId>metrics-core</artifactId>
      <version>${codahale.metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>com.codahale.metrics</groupId>
      <artifactId>metrics-graphite</artifactId>
      <version>${codahale.metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>com.codahale.metrics</groupId>
      <artifactId>metrics-jvm</artifactId>
      <version>${codahale.metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>com.codahale.metrics</groupId>
      <artifactId>metrics-servlet</artifactId>
      <version>${codahale.metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>com.codahale.metrics</groupId>
      <artifactId>metrics-servlets</artifactId>
      <version>${codahale.metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-json-org</artifactId>
      <version>2.2.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-hppc</artifactId>
      <version>2.2.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-joda</artifactId>
      <version>2.2.0</version>
    </dependency>
    <dependency>
      <groupId>com.ryantenney.metrics</groupId>
      <artifactId>metrics-spring</artifactId>
      <version>3.0.0-RC2</version>
    </dependency>


    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>jsr250-api</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <version>1</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.1.0.Final</version>
    </dependency>


    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <version>1.7.4</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <version>1.7.4</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aop</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-orm</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-tx</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-jpa</artifactId>
      <version>1.4.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>${spring.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
      <version>${spring.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-crypto</artifactId>
      <version>${spring.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
      <version>${spring.security.version}</version>
    </dependency>
      <dependency>
          <groupId>commons-lang</groupId>
          <artifactId>commons-lang</artifactId>
          <version>2.6</version>
      </dependency>
  </dependencies>


  <build>
    <finalName>cstl-admin</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
      <groupId>pl.project13.maven</groupId>
      <artifactId>git-commit-id-plugin</artifactId>
      <version>2.1.15</version>
      <executions>
        <execution>
          <goals>
            <goal>revision</goal>
          </goals>
        </execution>
      </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <message>You are running an older version of Maven. JHipster requires at least Maven 3.0</message>
                  <version>[3.0.0,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <message>You are running an older version of Java. JHipster requires at least JDK 1.7</message>
                  <version>[1.7.0,)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <!-- Force alphabetical order to have a reproducible build -->
          <runOrder>alphabetical</runOrder>
        </configuration>
      </plugin>
     <plugin>
	<groupId>org.eclipse.jetty</groupId>
	  <artifactId>jetty-maven-plugin</artifactId>
	  <version>9.2.5.v20141112</version>
	  <configuration>
	   <war>target/cstl-admin.war</war>
  </configuration>
</plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <path>/cstl-admin</path>
          <contextReloadable>true</contextReloadable>
          <protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
          <systemProperties>
            <spring.profiles.active>${spring.profiles.active}</spring.profiles.active>
          </systemProperties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>true</downloadJavadocs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>2.2</version>
      </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
                <!-- Disable maven-source-plugin execution -->
                <execution>
                    <id>attach-sources</id>
                    <phase>none</phase>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <configuration>
                <warName>cstl-admin</warName>
                <webResources>
                    <!-- Include grunt output directory -->
                    <resource>
                        <directory>${grunt.target.dir}</directory>
                    </resource>
                </webResources>
            </configuration>
        </plugin>
        <plugin>
            <groupId>com.github.eirslett</groupId>
            <artifactId>frontend-maven-plugin</artifactId>
            <version>${frontend.maven.plugin.version}</version>
            <executions>
                <!-- Download and install nodejs and npm (locally) -->
                <execution>
                    <id>install-node-and-npm</id>
                    <goals>
                        <goal>install-node-and-npm</goal>
                    </goals>
                    <phase>generate-resources</phase>
                    <configuration>
                        <nodeVersion>${node.version}</nodeVersion>
                        <npmVersion>${npm.version}</npmVersion>
                        <installDirectory>${node.install.dir}</installDirectory>
                    </configuration>
                </execution>
                <!-- Install required Node Packaged Modules -->
                <execution>
                    <id>npm-install</id>
                    <goals>
                        <goal>npm</goal>
                    </goals>
                    <configuration>
                        <installDirectory>${node.install.dir}</installDirectory>
                        <arguments>install</arguments>
                    </configuration>
                </execution>
                <!-- Run grunt build -->
                <execution>
                    <id>grunt-build</id>
                    <goals>
                        <goal>grunt</goal>
                    </goals>
                    <configuration>
                        <installDirectory>${node.install.dir}</installDirectory>
                        <arguments>${grunt.build.profile} --target_dir=${grunt.target.dir}</arguments>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
</project>
